homelab-gitops/apps/sabnzbd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 80
      targetPort: 8080
