homelab-gitops/apps/sabnzbd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sabnzbd.thundertest.org
      secretName: sabnzbd-tls
  rules:
    - host: sabnzbd.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 80
